# lpv_ws

./: .gitignore  plot_attack_results.sh  run_attack_node_only.sh  run_attack_sim.sh  setup_lpv_env.bash
src/lpv_attack_sim/: CMakeLists.txt  IMPROVEMENTS.md  QUICKREF.txt  README.md  README_GPS_SPOOF.md  package.xml
src/lpv_attack_sim/config/: gps_spoof_attack.yaml  gps_spoof_params.yaml  setpoint_attack.yaml  true_gps_input_attack.yaml
src/lpv_attack_sim/launch/: gazebo_attack_preview.launch  gazebo_native_gps_spoof_deviation.launch  gps_spoof_deviation.launch  single_attack_deviation.launch  single_iris_outdoor.launch  single_iris_outdoor_nogps.launch  true_gps_input_deviation.launch
src/lpv_attack_sim/scripts/: batch_attack_scenarios.sh  gazebo_attack_preview.py  generate_attack_metrics.py  generate_preview_csv.py  gps_spoof_attack_demo.py  make_attack_video.py  make_gps_spoof_video.py  make_gps_spoof_video_3d.py  make_true_gps_input_video.py  plot_attack_results.py  record_gazebo_window_once.sh  result_paths.py  run_gps_spoof_attack.sh  setpoint_fdi_attack_demo.py  true_gps_input_attack_demo.py  update_gps_spoof_config.py
src/lpv_attack_sim/worlds/: open_bright_field.world  outdoor1_light_grass_demo.world  outdoor1_light_white_roads_demo.world
